[gd_scene load_steps=7 format=3 uid="uid://cyoqo21jvvf6k"]

[ext_resource type="Script" uid="uid://blxqq5715fx2x" path="res://scripts/game_ui.gd" id="1_djwj0"]
[ext_resource type="PackedScene" uid="uid://bvhhta3af1hts" path="res://scenes/product_meter.tscn" id="2_e0pfi"]
[ext_resource type="Resource" uid="uid://cr3tni3ss8vvs" path="res://resources/product_doom_metal.tres" id="3_o3bws"]
[ext_resource type="Resource" uid="uid://ceris41rue5kw" path="res://resources/product_noise_pop.tres" id="4_3huio"]
[ext_resource type="Resource" uid="uid://c6t4cqq3uv8oq" path="res://resources/product_space_ambient.tres" id="5_sjwyb"]
[ext_resource type="Resource" uid="uid://fas0axhy8l1j" path="res://resources/product_progressive_rock.tres" id="6_5kh4o"]

[node name="GameUI" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_djwj0")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
custom_minimum_size = Vector2(1920, 1080)
layout_mode = 0
offset_right = 1920.0
offset_bottom = 1080.0

[node name="TitleLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 64
text = "Music Clicker"
horizontal_alignment = 1

[node name="ScoreLabel" type="Label" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 48
text = "Â£100"
horizontal_alignment = 1

[node name="ProductMeterParent" type="GridContainer" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_constants/h_separation = 10
theme_override_constants/v_separation = 10
columns = 2

[node name="ProductMeter0" parent="VBoxContainer/ProductMeterParent" instance=ExtResource("2_e0pfi")]
layout_mode = 2
product = ExtResource("3_o3bws")
cost_curve = 1

[node name="ProductMeter1" parent="VBoxContainer/ProductMeterParent" instance=ExtResource("2_e0pfi")]
layout_mode = 2
product = ExtResource("4_3huio")
base_time_seconds = 6.0
automate_cost = 200

[node name="ProductMeter2" parent="VBoxContainer/ProductMeterParent" instance=ExtResource("2_e0pfi")]
layout_mode = 2
product = ExtResource("5_sjwyb")
base_time_seconds = 9.0
automate_cost = 300

[node name="ProductMeter3" parent="VBoxContainer/ProductMeterParent" instance=ExtResource("2_e0pfi")]
layout_mode = 2
product = ExtResource("6_5kh4o")
base_time_seconds = 15.0
cost_curve = 2
automate_cost = 500
